# srt-translator

./: .env.example  .gitignore  README.md  example.en.srt  pyproject.toml  requirements.txt  translate.py
extension/: content.js  manifest.json  popup.html  popup.js
server/: main.py
srt_translator/: __init__.py  cli.py  config.py  errors.py  srt_parser.py  translator.py
tests/: test_output_filename.py  test_server.py  test_srt_parser.py
